5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1592_820.log
== TEST (2019-03-25 23:46:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR=int(input("Qual o valor do saque? "))
Cq=50 #Notas de 50
Dz=10 #Notas de 10
d=2 #Notas de 2
x= VALOR//Cq
y=(VALOR%Cq)//Dz
z=y//10
w=y%d
print(x)
print(y)
print(z)
alor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 16
    alor restante a ser sacado com notas menores que R$ 50
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:47:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR=int(input("Qual o valor do saque? "))
Cq=50 #Notas de 50
Dz=10 #Notas de 10
d=2 #Notas de 2
x= VALOR//Cq
y=(VALOR%Cq)//Dz
z=y//10
w=y%d
print(x)
print(y)
print(z)

-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 23:47:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR=int(input("Qual o valor do saque? "))
Cq=50 #Notas de 50
Dz=10 #Notas de 10
d=2 #Notas de 2
x= VALOR//Cq
y=(VALOR%Cq)//Dz
z=y//10
w=y%d
print(x)
print(y)
print(z)

-- EXECUTION TIME:
0.19308
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:49:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR=int(input("Qual o valor do saque? "))
Cq=50 #Notas de 50
Dz=10 #Notas de 10
d=2 #Notas de 2
x= VALOR//Cq
y=(VALOR%Cq)//Dz
z=y//10
w=y%d
print(x)
print(y)
print(z)

-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 23:50:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR=int(input("Qual o valor do saque? "))
Cq=50 #Notas de 50
Dz=10 #Notas de 10
d=2 #Notas de 2
x= VALOR//50
y=(VALOR%Cq)//10
z=y//2
w=y%2
print(x)
print(z)
print(w)

-- EXECUTION TIME:
0.144671
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
1
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:59:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

3512//50

-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:59:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x=3512//50
print(x)

-- OUTPUT:
70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:08:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 
print(3512//50)
print((3512%50)//10)


-- OUTPUT:
70
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:36:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 
V=int(input())
a=V//50
b=(V%50)//10
c=b//2
print(a)
print(b)
print(c)

-- OUTPUT:
40
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 00:36:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 
V=int(input())
a=V//50
b=(V%50)//10
c=b//2
print(a)
print(b)
print(c)

-- EXECUTION TIME:
0.188534
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:40:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 
V=int(input())
a=V//50
b=(V%50)//10
c=((V%50)%10)//2
print(a)
print(b)
print(c)

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 00:41:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 
V=int(input())
a=V//50
b=(V%50)//10
c=((V%50)%10)//2
print(a)
print(b)
print(c)

-- EXECUTION TIME:
0.153527
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
